trying to fix overlap on afsidebar and midbody

--- a/MainTemplateDark.css
+++ b/MainTemplateDark.css
@@ -74,6 +74,7 @@ header {
 	float: left;
 	width: 30%;
 	height:auto;
+	padding-right: 5px;
 	margin: 0px, 0px, 0px, 0px;
 	border-radius: 15px;
 }
@@ -97,8 +98,9 @@ header {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	margin-left: 4%;
-	margin-right: 3%;
-	padding-left: 5px;
+	margin-right: 0%;
+	padding-right: 0px;
+	padding-left: 10px;
 	border-radius: 15px;
 }
     @media screen and (max-width:900px){
